--- a/umbrel-app-store.yml
+++ b/umbrel-app-store.yml
@@ -1,2 +1,2 @@
-id: "sparkles" # Choose the ID for your app store. This should contain only alphabets ("a to z") and dashes ("-").
-name: "Sparkles" # Choose the name of your app store. It will show up in the UI as "<name> App Store".
+id: "spptcotststsff50b" # Choose the ID for your app store. This should contain only alphabets ("a to z") and dashes ("-").
+name: "System32 Pam Pam The Computer Of The Stores Thy Sell The System32 Folder For 50 bucks" # Choose the name of your app store. It will show up in the UI as "<name> App Store".
