--- a/hs123-pyload/umbrel-app.yml
+++ b/hs123-pyload/umbrel-app.yml
@@ -1,5 +1,5 @@
 manifestVersion: 1
-id: hs123-hello-world
+id: hs123-pyload
 name: HEllo WoRlD
 tagline: Replace this tagline with your app's tagline
 icon: https://svgur.com/i/mvA.svg
